# rust_nes_emu

./: .gitignore  Cargo.toml  README.md  opcodes_6502.json  opcodes_maker.py  opcodes_with_cycles.json  python_tracer.py  sbc_tests_maker.py  switch_maker.py
.cargo/: config.toml
.cargo-husky/hooks/: pre-push
full_tests/: compare_logs.py  compare_logs.rs  gen_cpu_logs_utils.rs  generate_cpu_logs.rs
nes_main/: cli_config.rs  main.rs  visual_config.rs
snake_game/: snake_game.rs
src/: cpu.rs  lib.rs  main.rs  prelude.rs
src/bus/: cartridge.rs  cartrige.rs  mem_tests.rs  memory.rs  mod.rs  ppu_memory.rs  ppu_memory_tests.rs  sdl2_keycode_serde.rs  user_input.rs
src/bus/controller/: mod.rs
src/bus/ppu_registers/: address_register.rs  control_register.rs  data_register.rs  internal_registers.rs  mask_register.rs  mod.rs  oam_address_register.rs  scroll_register.rs  status_register.rs
src/bus/ppu_registers_tests/: address_register.rs  control_register.rs  mod.rs
src/cpu/: cpu_tests.rs  massive_switch.rs  mem_utils.rs  mod.rs  opcodes.rs
src/cpu/cpu_operations/: arithmatic_logic.rs  arithmetic_logic.rs  control_flow.rs  interrupts_nop_stack.rs  mod.rs  register_ops.rs  status_register.rs
src/cpu/cpu_operations_tests/: arithmetic_logic.rs  control_flow.rs  interrupts_nop_stack.rs  mod.rs  register_ops.rs  status_register.rs
src/cpu/mem_utils/: mem_tests.rs  (+1 more)
src/ppu/: background_rendering.rs  frame.rs  full_screen_rendering.rs  mod.rs  redner_pixel.rs  render_nes.rs  render_sdl.rs  test_frame_rendering.rs  user_input.rs
tests/: compare_logs.rs
(+13 files in other folders)
