[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "SNAKE"
path = "snake_game/snake_game.rs"
[[bin]]
name = "gen_cpu_tests_logs"
path = "full_tests/generate_cpu_logs.rs"

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
sdl2 = "0.37.0"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]
