[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "SNAKE"
path = "snake_game/snake_game.rs"

[[bin]]
name = "nes_main"
path = "nes_main/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.31", features = ["derive"] }
once_cell = "1.20.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.11.0"
sdl2 = "0.37.0"
serde = { version = "1.0.218", features = ["derive"] }
serial_test = "3.2.0"
toml = "0.8.20"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]
